hn_tests/opt/failing/context0.hn
foo y = {
	t4 x = sum x y
	t4
}